# genio-cms

./: .adu-production.env  .dev.env  .eslintrc.cjs  .gitignore  .prod.env  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  shims.d.ts  themeConfig.ts  tsconfig.json  typed-router.d.ts  vite.config.ts
.github/: pull_request_template.md
mock-api/: mock_data.py  pyproject.toml
mock-api/resources/: articles.json  channels.json  videos.json  workspaces.json
mock-api/src/: __init__.py  main.py
mock-api/src/api/: articles.py  channels.py  news.py  router.py  videos.py  workspaces.py
mock-api/src/schemas/: articles.py  channels.py  enums.py  videos.py  workspaces.py
src/: App.vue
src/@core/utils/: formatters.ts  validators.ts
src/@db/: enums.ts
src/@db/app/articles/: types.ts
src/@layouts/plugins/: casl.ts
src/components/dialogs/: AddNewVideoDialog.vue  UserInfoEditDialog.vue  VideoPreviewDialog.vue
src/composables/: useApi.ts  useConfirmChangeDialog.ts
src/layouts/components/: DefaultLayoutWithHorizontalNav.vue  DefaultLayoutWithVerticalNav.vue  Footer.vue  NavBarNotifications.vue  NavSearchBar.vue  UserProfile.vue
src/navigation/horizontal/: dashboard.ts
src/navigation/vertical/: dashboard.ts  index.ts  news.ts
src/pages/articles/: [id].vue  index.vue
src/pages/channels/: index.vue
src/pages/dashboard/: index.vue
src/pages/materials/: index.vue
src/pages/videos/: [id].vue  index.vue
src/plugins/1.router/: additional-routes.ts
src/plugins/vuetify/: index.ts
src/utils/: api.ts  helper.ts
(+13 files in other folders)
